# precise_nlp

./: .coveragerc  LICENSE.txt  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
example/: csv_config.yaml  example_data.csv
scripts/: compare_output.py
src/colonoscopy_algo/: __main__.py  const.py  doc_parser.py  process.py
src/colonoscopy_algo/const/: const.py  cspy.py  enums.py  patterns.py
src/colonoscopy_algo/extract/: adenoma.py  algorithm.py  cspy.py  jar.py  parser.py  path.py  patterns.py  utils.py
src/colonoscopy_algo/extract/tests/: test_jar.py  test_maybe_counter.py
src/precise_nlp/: __main__.py  doc_parser.py  myio.py  process.py
src/precise_nlp/const/: enums.py  path.py  patterns.py
src/precise_nlp/extract/: algorithm.py  cspy.py  maybe_counter.py  path.py  polarity_counter.py  utils.py
src/precise_nlp/extract/cspy/: __init__.py  base_finding.py  cspy.py  finding_builder.py  finding_patterns.py  naive_finding.py  polyps.py  single_finding.py
src/precise_nlp/extract/path/: __init__.py  jar.py  jar_manager.py  path_manager.py  path_section.py  path_word.py  polyp_size.py  terms.py
src/precise_nlp/preprocess/: cspy_ocr.py
tests/: conftest.py  test_adenoma_count.py  test_carcinoma.py  test_cspy.py  test_cspy_denumerate.py  test_dysplasia.py  test_extent.py  test_finding_builder.py  test_finding_patterns.py  test_findings.py  test_indications.py  test_jar.py  test_large_adenoma.py  test_maybe_counter.py  test_naive_findings.py  test_number_convert.py  test_polarity_counter.py  test_polyp_extraction.py  test_single_finding.py  test_size.py  test_specimenize.py  test_villous.py
